crates/glyph-cli/tests/corpus/valid/goal_basic.glyph
skill demo()
    description: "Demo."
    goal: "Achieve the demo."
    flow:
        "Do."
