crates/glyph-cli/tests/corpus/invalid/block_cardinality_violation.glyph
skill demo()
    description: "Demo."
    flow:
        helper()

block helper()
    goal:
        "First."
        "Second."
    flow:
        "Do."
